--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  height: 100%;
+  font-family: 'Segoe UI', sans-serif;
+}
